--- a/vtl-api/pom.xml
+++ b/vtl-api/pom.xml
@@ -30,7 +30,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>API of the VTL prototypal engine</description>
+	<name>vtl-api</name>
+	<description>API of the VTL prototypal engine</description>
 
 	<build>
 		<plugins>
@@ -47,8 +48,12 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
