--- a/vtl-domains/pom.xml
+++ b/vtl-domains/pom.xml
@@ -31,7 +31,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>Implementation of VTL metadata repository and custom domains</description>
+	<name>vtl-domains</name>
+	 <description>Implementation of VTL metadata repository and custom domains</description>
 
 	<dependencies>
 		<dependency>
@@ -63,8 +64,12 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
