--- a/vtl-launcher/pom.xml
+++ b/vtl-launcher/pom.xml
@@ -31,7 +31,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>VTL dependency aggregator, for testing purposes</description>
+	<name>vtl-launcher</name>
+	<description>VTL dependency aggregator, for testing purposes</description>
 
 	<dependencies>
 		<dependency>
@@ -91,8 +92,12 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
