--- a/vtl-types/pom.xml
+++ b/vtl-types/pom.xml
@@ -31,7 +31,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>Implementation of various common API and helper classes</description>
+	<name>vtl-types</name>
+	<description>Implementation of various common API and helper classes</description>
 
 	<properties>
 		<antlr4.version>4.7.2</antlr4.version>
@@ -63,8 +64,12 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
