--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -30,7 +30,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>Implementation of several environments</description>
+	<name>vtl-envs</name>
+	<description>Implementation of several environments</description>
 
 	<properties>
 		<sdmx.version>2.3.3</sdmx.version>
@@ -88,8 +89,12 @@
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
