--- a/vtl-parser/pom.xml
+++ b/vtl-parser/pom.xml
@@ -23,6 +23,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>vtl-parser</artifactId>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>it.bancaditalia.oss.vtl</groupId>
@@ -30,7 +31,8 @@
 		<version>${revision}</version>
 	</parent>
 
-        <description>VTL grammar and generated parser</description>
+	<name>vtl-parser</name>
+	<description>VTL grammar and generated parser</description>
 
 	<properties>
 		<antlr4.version>4.7.2</antlr4.version>
@@ -95,8 +97,12 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
