--- a/RVTL/pom.xml
+++ b/RVTL/pom.xml
@@ -39,7 +39,38 @@
 			<activation>
 				<os>
 					<family>unix</family>
-					<name>Linux</name>
+				</os>
+			</activation>
+			<properties>
+				<exec.extension>sh</exec.extension>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<target>
+								<chmod file="${project.build.outputDirectory}/scripts/build-r.sh" perm="755" verbose="true" />
+							</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>macos</id>
+			<activation>
+				<os>
+					<family>mac</family>
 				</os>
 			</activation>
 			<properties>
