--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 	<modules>
 		<module>vtl-api</module>
 		<module>vtl-cli</module>
+		<module>vtl-confmgr</module>
 		<module>vtl-domains</module>
 		<module>vtl-engine</module>
 		<module>vtl-envs</module>
@@ -82,6 +83,7 @@
 			<modules>
 				<module>vtl-api</module>
 				<module>vtl-cli</module>
+				<module>vtl-confmgr</module>
 				<module>vtl-domains</module>
 				<module>vtl-editor</module>
 				<module>vtl-engine</module>
@@ -223,6 +225,11 @@
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-types</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-confman</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
