--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 	<modules>
 		<module>vtl-api</module>
 		<module>vtl-cli</module>
-		<module>vtl-confmgr</module>
+		<module>vtl-confman</module>
 		<module>vtl-domains</module>
 		<module>vtl-engine</module>
 		<module>vtl-envs</module>
@@ -83,7 +83,7 @@
 			<modules>
 				<module>vtl-api</module>
 				<module>vtl-cli</module>
-				<module>vtl-confmgr</module>
+				<module>vtl-confman</module>
 				<module>vtl-domains</module>
 				<module>vtl-editor</module>
 				<module>vtl-engine</module>
