--- a/RVTL/src/main/resources/R/NAMESPACE
+++ b/RVTL/src/main/resources/R/NAMESPACE
@@ -34,6 +34,9 @@ import("shinyAce")
 import("jdx")
 import("xtable")
 import("dplyr")
+export("VTLSession")
+export("VTLSessionManager")
+export("as.character.VTLSession")
 export("vtlCompile")
 export("vtlEvalNodes")
 export("vtlAddStatements")
@@ -42,5 +45,4 @@ export("vtlListNodes")
 export("vtlGetCode")
 export("vtlTopology")
 export("vtlListSessions")
-export("vtlKillSessions")
 export("vtlStudio")
