--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-confman</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
