Registry metadata repository

--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>vtl-session</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
