--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 
 	<modules>
 		<module>vtl-api</module>
+		<module>vtl-bootclient</module>
 		<module>vtl-cli</module>
 		<module>vtl-confman</module>
 		<module>vtl-domains</module>
@@ -72,6 +73,7 @@
 		<module>vtl-envs</module>
 		<module>vtl-launcher</module>
 		<module>vtl-parser</module>
+		<module>vtl-rest</module>
 		<module>vtl-session</module>
 		<module>vtl-transform</module>
 		<module>vtl-types</module>
@@ -82,6 +84,7 @@
 			<id>with-r</id>
 			<modules>
 				<module>vtl-api</module>
+				<module>vtl-bootclient</module>
 				<module>vtl-cli</module>
 				<module>vtl-confman</module>
 				<module>vtl-domains</module>
@@ -90,6 +93,7 @@
 				<module>vtl-envs</module>
 				<module>vtl-launcher</module>
 				<module>vtl-parser</module>
+				<module>vtl-rest</module>
 				<module>vtl-session</module>
 				<module>vtl-transform</module>
 				<module>vtl-types</module>
@@ -147,10 +151,13 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<slf4j.version>1.7.26</slf4j.version>
+		<log4j.version>2.13.3</log4j.version>
 		<junit.version>5.6.1</junit.version>
 		<junit-jupiter.version>${junit.version}</junit-jupiter.version>
 		<build-helper-maven-plugin.version>3.1.0</build-helper-maven-plugin.version>
+		<spring.boot.version>2.3.2.RELEASE</spring.boot.version>
 		<node.version>v10.20.1</node.version>
+		<antlr4.version>4.7.2</antlr4.version>
 		<scm-url>https://github.com/vpinna80/VTL</scm-url>
 		<site-url>https://vpinna80.github.io/VTL</site-url>
 		<license-url>https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt</license-url>
@@ -207,6 +214,18 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-dependencies</artifactId> 
+			    <version>${spring.boot.version}</version>
+				<type>pom</type>
+			    <scope>import</scope> 
+			</dependency> 
+			<dependency>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr4</artifactId>
+				<version>${antlr4.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
 				<artifactId>jakarta.xml.bind-api</artifactId>
 				<version>2.3.2</version>
@@ -220,6 +239,12 @@
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>it.bancaditalia.oss.vtl</groupId>
+				<artifactId>vtl-rest</artifactId>
+				<classifier>classes</classifier>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -286,7 +311,12 @@
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
-				<version>2.12.1</version>
+				<version>${log4j.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-web</artifactId>
+				<version>${log4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
@@ -363,6 +393,10 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.1.1</version>
+				</plugin>
+				<plugin>
+				    <artifactId>maven-war-plugin</artifactId>
+				    <version>3.3.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
