--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Setup R
+      uses: r-lib/actions/setup-R@v1
+      with:
+        r-version: '3.6.3'
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -27,4 +31,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: mvn --file pom.xml -Dgpg.skip=true clean install
+      run: mvn -P with-r --file pom.xml -Dgpg.skip=true clean install
