--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,14 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: r-lib/actions/setup-R@v1
+      with:
+        r-version: '3.6.3'
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Setup R
-      uses: r-lib/actions/setup-R@v1
-      with:
-        r-version: '3.6.3'
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
