--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,8 +14,8 @@ jobs:
       matrix:
         config:
           - {os: windows-latest, r: '3.6.3'}
-          - {os: macOS-latest, r: '3.6.3'}
-          - {os: ubuntu-18.04, r: '3.6.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
+#          - {os: macOS-latest, r: '3.6.3'}
+#          - {os: ubuntu-18.04, r: '3.6.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -73,4 +73,4 @@ jobs:
       shell: Rscript {0}
     
     - name: Build with Maven
-      run: mvn -P with-r --file pom.xml -Dgpg.skip=true clean install
+      run: mvn -P with-r --file pom.xml "-Dgpg.skip=true" clean install
