--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,18 +11,17 @@ jobs:
 
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    name: R ${{ matrix.r }} on ${{ matrix.config.os }} with Java ${{ matrix.java }}
 
     strategy:
       fail-fast: true
       matrix:
         config:
-          - {os: windows-latest, r: '3.6.3'}
-          - {os: macOS-latest, r: '3.6.3'}
-          - {os: ubuntu-18.04, r: '3.6.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
-          - {os: ubuntu-18.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
+          - os: windows-latest
+          - os: macOS-latest
+          - { os: ubuntu-18.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest" }
+        r: [3.6.3, release]
+        java: [1.8, 1.11, 1.14]
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -31,15 +30,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up JDK 1.8
+    - name: Setup Java ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java }}
     
     - name: Setup R
       uses: r-lib/actions/setup-r@v1
       with:
-        r-version: ${{ matrix.config.r }}
+        r-version: ${{ matrix.r }}
     
     - name: Generate RVTL DESCRIPTION file
       run: mvn -pl ".,RVTL" -P with-r --file pom.xml "-Dgpg.skip=true" "org.apache.maven.plugins:maven-resources-plugin:3.1.0:resources"
@@ -56,8 +55,8 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ env.R_LIBS_USER }}
-        key: ${{ runner.os }}-r-${{ matrix.config.r }}-1-${{ hashFiles('.github/depends.Rds') }}
-        restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-1-
+        key: ${{ runner.os }}-r-${{ matrix.r }}-1-${{ hashFiles('.github/depends.Rds') }}
+        restore-keys: ${{ runner.os }}-r-${{ matrix.r }}-1-
     
     - name: Install R package installer
       run: Rscript -e "install.packages('remotes')"
