--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,14 +14,14 @@ jobs:
     name: R ${{ matrix.r }} on ${{ matrix.config.os }} with Java ${{ matrix.java }}
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         config:
-          - os: windows-latest
-          - os: macOS-latest
+          #- os: windows-latest
+          #- os: macOS-latest
           - { os: ubuntu-18.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest" }
-        r: [3.6.3, release]
-        java: [8, 11, 14]
+        r: [ 3.6.3 ]
+        java: [ 14 ]
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -64,15 +64,18 @@ jobs:
     - name: Install system dependencies
       if: runner.os == 'Linux'
       env:
+        JAVA_CPPFLAGS: "-I$JAVA_HOME/include -I$JAVA_HOME/include/linux"
+        JAVA_LIBS: "-L$JAVA_HOME/jre/lib/amd64/server -ljvm"
+        LD_LIBRARY_PATH: "$JAVA_HOME/jre/lib/amd64:$JAVA_HOME/jre/lib/amd64/server"
         RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
       run: |
+        try(system("R CMD javareconf -e"))
         Rscript -e "remotes::install_github('r-hub/sysreqs')"
         sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('RVTL/target/classes/R/DESCRIPTION'))")
         sudo -s eval "$sysreqs"
     
     - name: Install dependencies
       run: |
-        try(system("sudo R CMD javareconf"))
         remotes::install_cran('rJava', type = ifelse(tolower(Sys.info()[["sysname"]])=="linux","source","both"))
         remotes::install_cran(c('devtools', 'roxygen2'))
         remotes::install_deps(pkgdir = 'RVTL/target/classes/R', dependencies = TRUE)
