--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,18 +64,19 @@ jobs:
     - name: Install system dependencies
       if: runner.os == 'Linux'
       env:
-        JAVA_CPPFLAGS: "-I$JAVA_HOME/include -I$JAVA_HOME/include/linux"
-        JAVA_LIBS: "-L$JAVA_HOME/jre/lib/amd64/server -ljvm"
-        LD_LIBRARY_PATH: "$JAVA_HOME/jre/lib/amd64:$JAVA_HOME/jre/lib/amd64/server"
         RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
       run: |
-        try(system("R CMD javareconf -e"))
         Rscript -e "remotes::install_github('r-hub/sysreqs')"
         sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('RVTL/target/classes/R/DESCRIPTION'))")
         sudo -s eval "$sysreqs"
     
     - name: Install dependencies
+      env:
+        JAVA_CPPFLAGS: "-I$JAVA_HOME/include -I$JAVA_HOME/include/linux"
+        JAVA_LIBS: "-L$JAVA_HOME/jre/lib/amd64/server -ljvm"
+        LD_LIBRARY_PATH: "$JAVA_HOME/jre/lib/amd64:$JAVA_HOME/jre/lib/amd64/server"
       run: |
+        try(system("sudo -E R CMD javareconf"))
         remotes::install_cran('rJava', type = ifelse(tolower(Sys.info()[["sysname"]])=="linux","source","both"))
         remotes::install_cran(c('devtools', 'roxygen2'))
         remotes::install_deps(pkgdir = 'RVTL/target/classes/R', dependencies = TRUE)
