--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,11 +17,11 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          #- os: windows-latest
-          #- os: macOS-latest
+          - os: windows-latest
+          - os: macOS-latest
           - { os: ubuntu-18.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest" }
-        r: [ 3.6.3 ]
-        java: [ 14 ]
+        r: [ 3.6.3, release ]
+        java: [ 8, 11, 14 ]
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -58,7 +58,8 @@ jobs:
     - name: Install R package installer
       run: Rscript -e "install.packages('remotes')"
 
-    - name: Generate RVTL DESCRIPTION file
+    - name: Generate RVTL DESCRIPTION file (Linux)
+      if: runner.os == 'Linux'
       run: mvn -pl ".,RVTL" -P with-r --file pom.xml "-Dgpg.skip=true" "org.apache.maven.plugins:maven-resources-plugin:3.1.0:resources"
 
     - name: Install R system dependencies
@@ -70,7 +71,8 @@ jobs:
         sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('RVTL/target/classes/R/DESCRIPTION'))")
         sudo -s eval "$sysreqs"
     
-    - name: Restore Java ${{ matrix.java }}
+    - name: Restore Java ${{ matrix.java }} (Linux)
+      if: runner.os == 'Linux'
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.java }}
