--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,8 +58,7 @@ jobs:
     - name: Install R package installer
       run: Rscript -e "install.packages('remotes')"
 
-    - name: Generate RVTL DESCRIPTION file (Linux)
-      if: runner.os == 'Linux'
+    - name: Generate RVTL DESCRIPTION file
       run: mvn -pl ".,RVTL" -P with-r --file pom.xml "-Dgpg.skip=true" "org.apache.maven.plugins:maven-resources-plugin:3.1.0:resources"
 
     - name: Install R system dependencies
