--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,18 +11,17 @@ jobs:
 
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+    name: R ${{ matrix.r }} on ${{ matrix.config.os }} with Java ${{ matrix.java }}
 
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: '3.6.3'}
-          - {os: macOS-latest, r: '3.6.3'}
-          - {os: ubuntu-18.04, r: '3.6.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
-          - {os: windows-latest, r: 'release'}
-          - {os: macOS-latest, r: 'release'}
-          - {os: ubuntu-18.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest"}
+          - os: windows-latest
+          - os: macOS-latest
+          - { os: ubuntu-18.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/bionic/latest" }
+        r: [ 3.6.3, release ]
+        java: [ 8, 11, 14 ]
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -31,19 +30,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up JDK 1.8
+    - name: Setup Java ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java }}
     
     - name: Setup R
       uses: r-lib/actions/setup-r@v1
       with:
-        r-version: ${{ matrix.config.r }}
+        r-version: ${{ matrix.r }}
     
-    - name: Generate RVTL DESCRIPTION file
-      run: mvn -pl ".,RVTL" -P with-r --file pom.xml "-Dgpg.skip=true" "org.apache.maven.plugins:maven-resources-plugin:3.1.0:resources"
-
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -51,18 +47,21 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
 
-    - name: Cache R packages
+    - name: Cache R packages (MacOS and Linux)
       if: runner.os != 'Windows'
       uses: actions/cache@v2
       with:
         path: ${{ env.R_LIBS_USER }}
-        key: ${{ runner.os }}-r-${{ matrix.config.r }}-1-${{ hashFiles('.github/depends.Rds') }}
-        restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-1-
+        key: ${{ runner.os }}-R-${{ matrix.r }}-Java-${{ matrix.java }}
+        restore-keys: ${{ runner.os }}-R-${{ matrix.r }}-Java-${{ matrix.java }}
     
     - name: Install R package installer
       run: Rscript -e "install.packages('remotes')"
 
-    - name: Install system dependencies
+    - name: Generate RVTL DESCRIPTION file
+      run: mvn -pl ".,RVTL" -P with-r --file pom.xml "-Dgpg.skip=true" "org.apache.maven.plugins:maven-resources-plugin:3.1.0:resources"
+
+    - name: Install R system dependencies (Linux)
       if: runner.os == 'Linux'
       env:
         RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
@@ -71,12 +70,21 @@ jobs:
         sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('RVTL/target/classes/R/DESCRIPTION'))")
         sudo -s eval "$sysreqs"
     
-    - name: Install dependencies
+    - name: Restore Java ${{ matrix.java }} (Linux)
+      if: runner.os == 'Linux'
+      uses: actions/setup-java@v1
+      with:
+        java-version: ${{ matrix.java }}
+    
+    - name: Link R to Java (MacOS and Linux)
+      if: runner.os != 'Windows'
+      run: sudo -E R CMD javareconf
+
+    - name: Install RVTL dependencies
       run: |
-        try(system("sudo R CMD javareconf"))
-        remotes::install_cran('rJava', type = ifelse(tolower(Sys.info()[["sysname"]])=="linux","source","both"))
-        remotes::install_cran(c('devtools', 'roxygen2'))
-        remotes::install_deps(pkgdir = 'RVTL/target/classes/R', dependencies = TRUE)
+        type <- ifelse(Sys.info()[["sysname"]] == "Windows", "binary", "both")
+        remotes::install_cran(c('devtools', 'rJava', 'roxygen2'),  type = type)
+        remotes::install_deps(pkgdir = 'RVTL/target/classes/R', dependencies = TRUE,  type = type)
       shell: Rscript {0}
     
     - name: Build with Maven
